# tigris-and-euphrates

./: .gitignore  .tarpaulin.toml  Cargo.toml  Makefile  README.md  build-web.sh  iterate_ai.sh  out.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: CI.yml
a0-jax/: generate_data.py  imitation_train.py  requirements.txt  train_agent.py  train_tne.py  tree_search.py
a0-jax/games/: tne.py
a0-jax/policies/: flax_policy.py
assets/: icon.kra  monuments.kra  tiles.kra  tiles.png~
bga-bot/: README.md  bga_assistant.py  bga_bot.py  test_interactive.py
minimax-local/: Cargo.toml
minimax-local/examples/chess/src/: main.rs
minimax-local/src/: interface.rs  util.rs
minimax-local/src/strategies/: common.rs  iterative.rs  mcts.rs  mod.rs  negamax.rs  random.rs  sync_util.rs  table.rs  ybw.rs
minimax-local/tests/: strategies.rs
minimax-rs/: .travis.yml
minimax-rs/src/: interface.rs  util.rs
minimax-rs/src/strategies/: mcts.rs  negamax.rs  random.rs
python_tests/: run.py
src/: game.rs  history.rs  interop.rs  lib.rs  main.rs  solver.rs  visualizer.rs  wasm.rs
web/: README.md  game.js  index.html  style.css
