[package]
name = "tigris-and-euphrates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = {version = "0.3.25", optional = true}
minimax = { path = "minimax-local" }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.18.0", features = ["extension-module", "multiple-pymethods"], optional = true }
numpy = { version = "0.18.0", optional = true }
primitive-types = {version = "0.12.1", features = ["serde"]}
derive_more = "0.99.17"
once_cell = "1.17.1"
wasm-bindgen = { version = "0.2.95", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[profile.release]
debug = true

[lib]
crate-type = ["cdylib"]
name = "tne"

[features]
default = []
python = ["pyo3", "numpy"]
game = ["macroquad"]
wasm = ["wasm-bindgen", "console_error_panic_hook", "getrandom"]
